--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     
     <!-- Product Cards -->
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden transition duration-300 transform glow fade-in">
-      <img src="product1.jpg" alt="Product 1" class="w-full h-56 object-cover">
+      <img src="product1.jpg" alt="Formal Combo - Slim Fit" class="w-full h-56 object-cover">
       <div class="p-5 text-center">
         <h2 class="text-xl font-semibold mb-2">Product 1</h2>
         <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
@@ -126,7 +126,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     </div>
 
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden transition duration-300 transform glow fade-in">
-      <img src="product2.jpg" alt="Product 2" class="w-full h-56 object-cover">
+      <img src="product2.jpg" alt="ProduFormal Combo - Regular Classic" class="w-full h-56 object-cover">
       <div class="p-5 text-center">
         <h2 class="text-xl font-semibold mb-2">Product 2</h2>
         <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
