--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden transition duration-300 transform glow fade-in">
       <img src="product1.jpg" alt="Formal Combo - Slim Fit" class="w-full h-56 object-cover">
       <div class="p-5 text-center">
-        <h2 class="text-xl font-semibold mb-2">Product 1</h2>
+        <h2 class="text-xl font-semibold mb-2">Formal Combo - Slim Fit</h2>
         <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
         <button onclick="orderNow('Product 1')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
           Order via WhatsApp
@@ -126,9 +126,9 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     </div>
 
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden transition duration-300 transform glow fade-in">
-      <img src="product2.jpg" alt="ProduFormal Combo - Regular Classic" class="w-full h-56 object-cover">
+      <img src="product2.jpg" alt="Formal Combo - Regular Classic" class="w-full h-56 object-cover">
       <div class="p-5 text-center">
-        <h2 class="text-xl font-semibold mb-2">Product 2</h2>
+        <h2 class="text-xl font-semibold mb-2">Formal Combo - Regular Classic</h2>
         <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
         <button onclick="orderNow('Product 2')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
           Order via WhatsApp
@@ -139,7 +139,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden transition duration-300 transform glow fade-in">
       <img src="product3.jpg" alt="Product 3" class="w-full h-56 object-cover">
       <div class="p-5 text-center">
-        <h2 class="text-xl font-semibold mb-2">Product 3</h2>
+        <h2 class="text-xl font-semibold mb-2">Formal Combo - Premium Stretch</h2>
         <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
         <button onclick="orderNow('Product 3')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
           Order via WhatsApp
@@ -150,7 +150,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden transition duration-300 transform glow fade-in">
       <img src="product4.jpg" alt="Product 4" class="w-full h-56 object-cover">
       <div class="p-5 text-center">
-        <h2 class="text-xl font-semibold mb-2">Product 4</h2>
+        <h2 class="text-xl font-semibold mb-2">Formal Combo - Executive Look</h2>
         <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
         <button onclick="orderNow('Product 4')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
           Order via WhatsApp
