--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
     <img src="hero-banner.jpg" alt="Hero Banner" class="w-full h-96 object-cover opacity-70">
     <div class="absolute inset-0 bg-gradient-to-r from-indigo-800 via-purple-700 to-transparent opacity-80"></div>
     <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-6">
-      <h2 class="text-4xl md:text-5xl font-extrabold mb-3 drop-shadow-lg">Premium Deals at Your Fingertips</h2>
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-3 drop-shadow-lg"> সেরা দামে,স্মার্ট শপিং || সেরা পণ্য, সেরা দাম – এখন শপিংয়ে নতুন ধারা। </h2>
       <p id="typing-text" class="typing text-lg md:text-xl mb-6 opacity-90 h-8"></p>
       <a href="https://wa.me/8801750056652" target="_blank" class="bg-green-500 hover:bg-green-600 text-white font-semibold px-8 py-3 rounded-full shadow-lg transform hover:scale-105 transition">
         🛒 Shop Now on WhatsApp
