--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
   <a href="https://wa.me/8801750056652" target="_blank" class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg transition transform hover:scale-110">
     💬
   </a>
+  <div class="text-center mt-6">
+    <a href="https://m.me/61572271088387" target="_blank"
+      class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 text-sm rounded-full shadow">
+      💬 Message Us
+    </a>
+  </div>
 
   <!-- FOOTER -->
   <footer class="text-center py-6 bg-gray-900 text-gray-300 mt-10">
