--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"
   <div class="text-center mt-6">
     <a href="https://m.me/61572271088387" target="_blank"
       class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 text-sm rounded-full shadow">
-      💬 Message Us
+      💬 Message Us On FB
     </a>
   </div>
 
