--- a/index.html
+++ b/index.html
@@ -144,4 +144,85 @@
 
     <!-- GADGETS SECTION -->
     <section>
-      <h2 class="text-3xl font-bold mb-6 text-gray-800 border-l-4 border-pink-600 pl-3">🔌 Gadgets & Accessories</h
+      <h2 class="text-3xl font-bold mb-6 text-gray-800 border-l-4 border-pink-600 pl-3">🔌 Gadgets & Accessories</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="gadget1.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Smart Watch Pro</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Smart Watch Pro')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="gadget2.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Wireless Earbuds</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Wireless Earbuds')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TRENDING SECTION -->
+    <section>
+      <h2 class="text-3xl font-bold mb-6 text-gray-800 border-l-4 border-yellow-500 pl-3">🔥 Trending Now</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="trend1.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Classic Analog Watch</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Classic Analog Watch')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NEWS SECTION -->
+    <section class="bg-white rounded-2xl shadow-lg p-8 fade-in">
+      <h2 class="text-3xl font-bold mb-4 text-gray-800 border-l-4 border-green-600 pl-3">📰 Latest News & Updates</h2>
+      <ul class="space-y-3">
+        <li class="border-b pb-2">
+          <h3 class="font-semibold text-lg text-gray-800">🎉 নতুন কালেকশন এসেছে – Formal Combo 2025 Edition!</h3>
+          <p class="text-sm text-gray-600">অর্ডার করতে এখনই ক্লিক করুন বা WhatsApp করুন।</p>
+        </li>
+        <li class="border-b pb-2">
+          <h3 class="font-semibold text-lg text-gray-800">⚡ ফ্রি ডেলিভারি অফার চলছে – সীমিত সময়ের জন্য!</h3>
+          <p class="text-sm text-gray-600">ঢাকা সিটির মধ্যে ফ্রি ডেলিভারি, আজই অর্ডার করুন।</p>
+        </li>
+        <li>
+          <h3 class="font-semibold text-lg text-gray-800">🛍 নতুন গ্যাজেট কালেকশন যুক্ত হয়েছে!</h3>
+          <p class="text-sm text-gray-600">স্মার্টওয়াচ, ইয়ারবাড এবং আরও অনেক কিছু।</p>
+        </li>
+      </ul>
+    </section>
+
+  </main>
+
+  <!-- FLOATING WHATSAPP -->
+  <a href="https://wa.me/8801750056652" target="_blank" class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg transform hover:scale-110 transition">
+    💬
+  </a>
+  <div class="text-center mt-6">
+    <a href="https://m.me/61572271088387" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 text-sm rounded-full shadow">
+      💬 Message Us On FB
+    </a>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="text-center py-6 bg-gray-900 text-gray-300 mt-10">
+    <p>📞 Contact: 01750056652 | 🌐 
+      <a href="https://www.shopsmartify.store" class="text-indigo-400 hover:underline">www.shopsmartify.store</a>
+    </p>
+    <p class="text-sm mt-2">© 2025 SHOP Smarty. All rights reserved.</p>
+  </footer>
+</body>
+</html>
